# LLM-MusicTheory

./: .coverage  .env.example  .gitignore  Makefile  README.md  RECENT_UPDATES.md  STATUS.md  TODO.md  pyproject.toml  pytest.ini  run_tests.py
.github/instructions/: agent_instructions.instructions.md
.github/workflows/: test.yml
data/: README.md
data/LLM-RCM/encoded/mei/: Q1b.mei
data/LLM-RCM/prompts/base/: base_abc.txt  base_humdrum.txt  base_mei.txt  base_musicxml.txt
data/fux-counterpoint/encoded/: Fux_CantusFirmus.mscz
data/fux-counterpoint/encoded/musescore/: Fux_CantusFirmus_full.mscz
data/fux-counterpoint/encoded/musicxml/: Fux_CantusFirmus_full.musicxml
data/fux-counterpoint/guides/: guide.md
data/fux-counterpoint/prompts/: prompt.md
docs/: README.md  adding-questions.md  api-reference.md  architecture.md  configuration.md  development.md  examples.md  experiments.md  installation.md  quickstart.md  research.md  scripts.md  troubleshooting.md  user-guide.md
examples/: README.md
llm_music_theory/cli/: run_single.py
llm_music_theory/core/: dispatcher.py  runner.py
llm_music_theory/models/: base.py  chatgpt.py  claude.py  deepseek.py  gemini.py
llm_music_theory/prompts/: prompt_builder.py
llm_music_theory/utils/: path_utils.py
outputs/fux-counterpoint/Gemini/context/LLM-Guide/: Fux_CantusFirmus_A_1.musicxml  Fux_CantusFirmus_A_1.prompt.txt
outputs/fux-counterpoint/Gemini/no-context/: Fux_CantusFirmus_A_1.input.json  Fux_CantusFirmus_A_1.musicxml  Fux_CantusFirmus_A_1.prompt.txt  Fux_CantusFirmus_A_2.input.json  Fux_CantusFirmus_A_2.musicxml  Fux_CantusFirmus_A_2.prompt.txt  Fux_CantusFirmus_C_1.input.json  Fux_CantusFirmus_C_1.musicxml  Fux_CantusFirmus_C_1.prompt.txt  Fux_CantusFirmus_D_1.input.json  Fux_CantusFirmus_D_1.musicxml  Fux_CantusFirmus_D_1.prompt.txt  Fux_CantusFirmus_E_1.input.json  Fux_CantusFirmus_E_1.musicxml  Fux_CantusFirmus_E_1.prompt.txt  Fux_CantusFirmus_F_1.input.json  Fux_CantusFirmus_F_1.musicxml  Fux_CantusFirmus_F_1.prompt.txt  Fux_CantusFirmus_G_1.input.json  Fux_CantusFirmus_G_1.musicxml  Fux_CantusFirmus_G_1.prompt.txt
outputs_backup/GeminiModel/: fux-counterpoint__Fux_CantusFirmus_mei_context.input.json  fux-counterpoint__Fux_CantusFirmus_mei_context.mei  fux-counterpoint__Fux_CantusFirmus_mei_context.txt  fux-counterpoint__Fux_CantusFirmus_musicxml_context.input.json  fux-counterpoint__Fux_CantusFirmus_musicxml_context.musicxml
scripts/: README.md
src/llm_music_theory/cli/: run_batch.py  run_single.py
src/llm_music_theory/config/: settings.py
src/llm_music_theory/core/: dispatcher.py  prompt_builder.py  runner.py
src/llm_music_theory/experiments/: spec.py
src/llm_music_theory/models/: base.py  chatgpt.py  claude.py  deepseek.py  gemini.py
src/llm_music_theory/prompts/: prompt_builder.py
src/llm_music_theory/utils/: path_utils.py
tests/: conftest.py  test_comprehensive.py  test_dispatcher.py  test_dispatcher_contract.py  test_integration.py  test_models.py  test_models_contract.py  test_path_utils.py  test_prompt_building.py  test_runner.py  test_utils_contract.py
